--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -701,8 +701,54 @@ border-radius: .5rem;
 }
 
 /*==================== PORTFOLIO ====================*/
+.portfolio__container{
+  overflow: initial;
+}
 
+.portfolio__content{
+  padding: 1rem 2.5rem;
+}
 
+.portfolio__img{
+  width: 265px;
+  border-radius: .5rem;
+  justify-self: center;
+}
+
+.portfolio__title{
+  font-size: var(--h3-font-size);
+  margin-bottom: var(--mb-0-5);
+}
+
+.portfolio__description{
+  margin-bottom: var(--mb-0-75);
+}
+
+.portfolio__button:hover .button__icon{
+  transform: translateX(.25rem);
+}
+
+.swiper-button-prev::after,
+.swiper-button-next::after{
+  contain: '';
+}
+
+.swiper-portfolio-icon{
+  font-size: 1rem;
+  color: var(--first-color);
+}
+
+.swiper-button-prev{
+  left: -.2rem;
+}
+
+.swiper-button-next{
+  /* right: -.5rem; */
+}
+
+.swiper-container-horizontal > .swiper-pagination-bullets{
+  bottom: -2.5rem;
+}
 /*==================== PROJECT IN MIND ====================*/
 
 
