half swipwer updated

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -748,6 +748,7 @@ border-radius: .5rem;
 
 .swiper-container-horizontal > .swiper-pagination-bullets{
   bottom: -2.5rem;
+  color: red;
 }
 /*==================== PROJECT IN MIND ====================*/
 
