--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -764,8 +764,38 @@ border-radius: .5rem;
   outline: none;
 }
 /*==================== PROJECT IN MIND ====================*/
+.project{
+  margin-top: 70px;
+  text-align: center;
+}
 
+.project__bg{
+  background-color: var(--first-color-second);
+  padding-top: 3rem;
+}
 
+.project__title{
+  font-size: var(--h2-font-size);
+  margin-bottom: var(--mb-0-75);
+}
+
+.project__description{
+  margin-bottom: var(--mb-1-5);
+}
+
+.project__title,
+.project__description{
+  color: #FFF;
+}
+
+.project__img{
+  width: 232px;
+  justify-self: center;
+}
+
+/* .button--white:hover{
+  background-color: red;
+} */
 /*==================== TESTIMONIAL ====================*/
 
 
