--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -350,6 +350,14 @@ img {
   transition: .3s;
 }
 
+.button--white{
+  background-color: #FFF;
+  color: var(--first-color);
+}
+
+.button--white:hover{
+  background-color: #FFF;
+}
 .button--flex {
   display: inline-flex;
   align-items: center;
@@ -772,6 +780,7 @@ border-radius: .5rem;
 .project__bg{
   background-color: var(--first-color-second);
   padding-top: 3rem;
+  margin-top: 4rem;
 }
 
 .project__title{
@@ -793,12 +802,47 @@ border-radius: .5rem;
   justify-self: center;
 }
 
-/* .button--white:hover{
-  background-color: red;
-} */
+
 /*==================== TESTIMONIAL ====================*/
+.testimonial__data,
+.testimonial__header{
+  display: flex;
+}
 
+.testimonial__data{
+  justify-content: space-between;
+  margin-bottom: var(--mb-1);
+}
 
+.testimonial__img{
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  margin-right: var(--mb-0-75);
+}
+
+.testimonial__name{
+  font-size: var(--h3-font-size);
+  font-weight: var(--font-medium);
+}
+
+.testimonial__client{
+  font-size: var(--small-font-size);
+  color: var(--text-color-light);
+}
+
+.testimonial__description{
+  margin-bottom: var(--mb-2-5);
+}
+
+.testimonial__icon-star{
+  color: var(--first-color);
+  
+}
+
+.swiper-container .swiper-pagination-testimonial{
+  bottom: 0;
+}
 /*==================== CONTACT ME ====================*/
 
 
