--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -129,7 +129,7 @@ img {
 .section__subtitle {
   display: block;
   font-size: var(--small-font-size);
-  /* margin-bottom: var(--mb-3); */
+  margin-bottom: var(--mb-3);
 }
 
 .section__title,
@@ -414,9 +414,10 @@ about__info-name {
   text-align: center;
 }
 
-.about__button {
+.about__buttons {
   display: flex;
   justify-content: center;
+  
 }
 
 /*==================== SKILLS ====================*/
@@ -844,7 +845,53 @@ border-radius: .5rem;
   bottom: 0;
 }
 /*==================== CONTACT ME ====================*/
+.contact__container{
+  row-gap: 3rem;
+}
 
+.contact__information{
+  display: flex;
+  margin-bottom: var(--mb-2);
+}
+
+.contact__icon{
+  font-size: 2rem;
+  color: var(--first-color);
+  margin-right: var(--mb-0-75);
+}
+
+.contact__title{
+  font-size: var(--h3-font-size);
+  font-weight: var(--font-medium);
+}
+
+.contact__subtitle{
+  font-size: var(--small-font-size);
+  color: var(--text-color-light);
+}
+
+.contact__content{
+  background-color: var(--input-color);
+  border-radius: .5rem;
+  padding: .75rem 1rem .25rem;
+}
+
+.contact__label{
+  font-size: var(--small-font-size);
+  color: var(--title-color);
+}
+
+.contact__input{
+  width: 100%;
+  background-color: var(--input-color);
+  color: var(--text-color);
+  font-family: var(--body-font);
+  font-size: var(--normal-font-size);
+  border: none;
+  outline: none;
+  padding: .25rem .5rem .5rem 0;
+
+}
 
 /*==================== FOOTER ====================*/
 
