--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -71,7 +71,7 @@
 }
 
 /*========== Variables Dark theme ==========*/
-body.dark-theme{
+body.dark-theme {
   /* HSL color mode */
 
   --first-color-second: hsl(var(--hue-color), 30%, 8%);
@@ -86,19 +86,19 @@ body.dark-theme{
 }
 
 /*========== Button Dark/Light ==========*/
-.nav__btns{
+.nav__btns {
   display: flex;
   align-items: center;
 }
 
-.change-theme{
+.change-theme {
   font-size: 1.25rem;
   color: var(--title-color);
   margin-right: var(--mb-1);
   cursor: pointer;
 }
 
-.change-theme:hover{
+.change-theme:hover {
   color: var(--first-color);
 }
 
@@ -268,12 +268,12 @@ img {
 }
 
 /* Active link */
-.sctive-link{
+.sctive-link {
   color: var(--first-color);
 }
 
 /* Change background header */
-.scroll-header{
+.scroll-header {
   box-shadow: 0 -1px 4px rgba(0, 0, 0, .15);
 }
 
@@ -309,7 +309,7 @@ img {
 }
 
 .home__blob-img {
-  width: 170px;
+  width: 230px;
 }
 
 .home__data {
@@ -380,32 +380,33 @@ img {
   transition: .3s;
 }
 
-.button--white{
+.button--white {
   background-color: #FFF;
   color: var(--first-color);
 }
 
-.button--white:hover{
+.button--white:hover {
   background-color: #FFF;
 }
+
 .button--flex {
   display: inline-flex;
   align-items: center;
 }
 
-.button--small{
+.button--small {
   padding: .75rem 1rem;
 }
 
-.button--link{
+.button--link {
   padding: 0;
   background-color: transparent;
   color: var(--first-color);
 }
 
-.button--link:hover{
-   background-color: transparent;
-   color: var(--first-color-alt);
+.button--link:hover {
+  background-color: transparent;
+  color: var(--first-color-alt);
 }
 
 
@@ -447,7 +448,7 @@ about__info-name {
 .about__buttons {
   display: flex;
   justify-content: center;
-  
+
 }
 
 /*==================== SKILLS ====================*/
@@ -469,30 +470,32 @@ about__info-name {
   color: var(--first-color);
 }
 
-.skills__icon{
+.skills__icon {
   font-size: var(--mb-0-75);
 }
-.skills__title{
+
+.skills__title {
   font-size: var(--h3-font-size);
 }
+
 .skills__subtitle {
   font-size: var(--small-font-size);
   color: var(--text-color-light);
 }
 
-.skills__arrow{
+.skills__arrow {
   margin-left: auto;
   transition: .4s;
 }
 
-.skills__titles{
+.skills__titles {
   display: flex;
   justify-content: space-between;
   margin-bottom: var(--mb-0-5);
 
 }
 
-.skills__name{
+.skills__name {
   font-size: var(--normal-font-size);
   font-family: var(--font-medium);
 }
@@ -509,109 +512,122 @@ about__info-name {
   /* border-color: var(--first-color-lighter); */
 }
 
-.skills__percentage{
+.skills__percentage {
   display: block;
   background-color: var(--first-color);
 }
 
-.skills__html{
+.skills__html {
   width: 90%;
 }
-.skills__CSS{
+
+.skills__CSS {
   width: 70%;
 }
-.skills__tailwind{
+
+.skills__tailwind {
   width: 90%;
 }
-.skills__javaScript{
-  width: 60%;
-}
-.skills__react{
-  width: 75%;
-}
-.skills__UI-UX{
-  width: 60%;
-}
-.skills__node{
-  width: 50%;
-}
-.skills__C{
-  width: 50%;
-}
-.skills__mongodb{
-  width: 50%;
-}
-.skills__github{
-  width: 70%;
-}
-.skills__figma{
-  width: 65%;
-}
-.skills__photoshop{
+
+.skills__javaScript {
   width: 60%;
 }
 
-.skills__close .skills__list{
+.skills__react {
+  width: 30%;
+}
+
+.skills__UI-UX {
+  width: 60%;
+}
+
+.skills__node {
+  width: 30%;
+}
+
+.skills__C {
+  width: 30%;
+}
+
+.skills__mongodb {
+  width: 30%;
+}
+
+.skills__github {
+  width: 70%;
+}
+
+.skills__figma {
+  width: 65%;
+}
+
+.skills__photoshop {
+  width: 60%;
+}
+
+.skills__close .skills__list {
   height: 0;
   overflow: hidden;
 }
-.skills__open .skills__list{
+
+.skills__open .skills__list {
   height: max-content;
   margin-bottom: var(--mb-2-25);
 }
 
-.skills__open .skills__arrow{
+.skills__open .skills__arrow {
   transform: rotate(-180deg);
 }
+
 /*==================== QUALIFICATION ====================*/
-.qualification__tabs{
+.qualification__tabs {
   display: flex;
   justify-content: space-evenly;
   margin-bottom: var(--mb-2);
 }
 
-.qualification__button{
+.qualification__button {
   font-size: var(--h3-font-size);
   font-weight: var(--font-medium);
   cursor: pointer;
 }
 
-.qualification__button:hover{
+.qualification__button:hover {
   color: var(--first-color);
 }
 
 /* .qualification__button:checked{
   color: red;
 } */
-.qualification__icon{
+.qualification__icon {
   font-size: 1.8rem;
   margin-right: var(--mb-0-25);
 }
 
-.qualification__data{
+.qualification__data {
   display: grid;
   grid-template-columns: 1fr max-content 1fr;
   column-gap: 1.5rem;
 }
 
 
-.qualification__title{
+.qualification__title {
   font-size: var(--normal-font-size);
   font-weight: var(--font-medium);
 }
 
-.qualification__subtitle{
+.qualification__subtitle {
   display: inline-block;
   font-size: var(--smaller-font-size);
   margin-bottom: var(--mb-1);
 }
 
-.qualification__calender{
+.qualification__calender {
   font-size: var(--small-font-size);
   color: var(--text-color-light);
 }
 
-.qualification__rounder{
+.qualification__rounder {
   display: inline-block;
   width: 13px;
   height: 13px;
@@ -619,7 +635,7 @@ about__info-name {
   border-radius: 50%;
 }
 
-.qualification__line{
+.qualification__line {
   display: block;
   width: 1px;
   height: 100%;
@@ -627,25 +643,25 @@ about__info-name {
   transform: translate(6px, -7px);
 }
 
-.qualification [data-content]{
+.qualification [data-content] {
   display: none;
 }
 
-.qualification__active[data-content]{
+.qualification__active[data-content] {
   display: block;
 }
 
-.qualification__button.qualification__active{
+.qualification__button.qualification__active {
   color: var(--first-color);
 }
- 
+
 /*==================== SERVICES ====================*/
-.services__container{
+.services__container {
   gap: 1.5rem;
-  grid-template-columns: repeat(2,1fr);
+  grid-template-columns: repeat(2, 1fr);
 }
 
-.services__content{
+.services__content {
   position: relative;
   background-color: var(--container-color);
   padding: 3.5rem .5rem 1.24rem 1.5rem;
@@ -654,33 +670,33 @@ about__info-name {
   transition: .3s;
 }
 
-.services__content:hover{
+.services__content:hover {
   box-shadow: 0 4px 8px rgba(0, 0, 0, .15);
 }
 
-.services__icon{
+.services__icon {
   display: block;
   font-size: 1.5rem;
   color: var(--first-color);
   margin-bottom: var(--mb-1);
 }
 
-.services__title{
+.services__title {
   font-size: var(--h3-font-size);
   margin-bottom: var(--mb-1);
   font-weight: var(--font-medium);
 }
 
-.services__button{
+.services__button {
   cursor: pointer;
   font-size: var(--small-font-size);
 }
 
-.services__button:hover .button__icon{
+.services__button:hover .button__icon {
   transform: translateX(.25rem);
 }
 
-.services__modal{
+.services__modal {
   position: fixed;
   top: 0;
   left: 0;
@@ -697,29 +713,29 @@ about__info-name {
   transition: .3s;
 }
 
-.services__modal-content{
+.services__modal-content {
   position: relative;
   background-color: hsl(250deg 17% 13%);
   padding: 1.5rem;
-border-radius: .5rem;
+  border-radius: .5rem;
 }
 
-.services__modal-services{
+.services__modal-services {
   row-gap: 1rem;
 }
 
-.services__modal-service{
+.services__modal-service {
   display: flex;
 }
 
-.services__modal-title{
+.services__modal-title {
   font-size: var(--h3-font-size);
   font-weight: var(--font-medium);
   margin-bottom: var(--mb-1-5);
 }
 
 
-.services__modal-close{
+.services__modal-close {
   position: absolute;
   top: 1rem;
   right: 1rem;
@@ -728,196 +744,203 @@ border-radius: .5rem;
   cursor: pointer;
 }
 
-.services__modal-icon{
+.services__modal-icon {
   color: var(--first-color);
   margin-right: var(--mb-0-25);
 }
 
 /* Active Modal */
-.active-modal{
+.active-modal {
   opacity: 1;
   visibility: visible;
 }
 
 /*==================== PORTFOLIO ====================*/
-.portfolio__container{
+.portfolio__container {
   overflow: initial;
 }
 
-.portfolio__content{
+.portfolio__content {
   padding: 0rem 1.5rem;
 }
 
-.portfolio__img{
+.portfolio__img {
   width: 300px;
   border-radius: .5rem;
   justify-self: center;
 }
 
-.portfolio__title{
+.portfolio__title {
   font-size: var(--h3-font-size);
   margin-bottom: var(--mb-0-5);
 }
 
-.portfolio__description{
+.portfolio__description {
   margin-bottom: var(--mb-0-75);
 }
 
-.portfolio__button:hover .button__icon{
+.portfolio__button:hover .button__icon {
   transform: translateX(.25rem);
 }
 
 .swiper-button-prev::after,
-.swiper-button-next::after{
+.swiper-button-next::after {
   content: '';
 }
 
-.swiper-portfolio-icon{
+.swiper-portfolio-icon {
   font-size: 3rem;
   color: var(--first-color);
   margin-top: -80px;
 }
 
-.swiper-button-prev{
+.swiper-button-prev {
   left: -1rem;
   position: relative;
   margin-top: -17rem;
 }
 
-.swiper-button-next{
+.swiper-button-next {
   /* right: 2.5rem; */
   position: relative;
   top: -15rem;
   right: -95%;
 }
 
-.swiper-container-horizontal > .swiper-pagination-bullets{
+.swiper-container-horizontal>.swiper-pagination-bullets {
   bottom: 3rem;
 }
 
-.adjust{
+.adjust {
   position: relative;
   top: 220px;
 }
-.swiper.swiper-pagination-bullet-active{
+
+.swiper.swiper-pagination-bullet-active {
   background-color: var(--first-color);
 }
 
 .swiper-button-prev,
 .swiper-button-next,
-.swiper-pagination-bullet{
+.swiper-pagination-bullet {
   outline: none;
 }
+
 /*==================== PROJECT IN MIND ====================*/
-.project{
+.project {
   margin-top: 70px;
   text-align: center;
 }
 
-.project__bg{
+.project__bg {
   background-color: var(--first-color-second);
   padding-top: 4rem;
   margin-top: 8rem;
 }
 
-.project__title{
+.project__title {
   font-size: var(--h2-font-size);
   margin-bottom: var(--mb-0-75);
 }
 
-.project__description{
+.project__description {
   margin-bottom: var(--mb-1-5);
 }
 
 .project__title,
-.project__description{
+.project__description {
   color: #FFF;
 }
 
-.project__img{
+.project__img {
   width: 232px;
   justify-self: center;
+  position: relative;
+  top: 55px;
+  box-shadow: 0px 0px 16px 0px;
+  border-radius: 14px;
 }
 
 
 /*==================== TESTIMONIAL ====================*/
 .testimonial__data,
-.testimonial__header{
+.testimonial__header {
   display: flex;
 }
 
-.testimonial__data{
+.testimonial__data {
   justify-content: space-between;
   margin-bottom: var(--mb-1);
 }
 
-.testimonial__img{
+.testimonial__img {
   width: 60px;
   height: 60px;
   border-radius: 50%;
   margin-right: var(--mb-0-75);
 }
 
-.testimonial__name{
+.testimonial__name {
   font-size: var(--h3-font-size);
   font-weight: var(--font-medium);
 }
 
-.testimonial__client{
+.testimonial__client {
   font-size: var(--small-font-size);
   color: var(--text-color-light);
 }
 
-.testimonial__description{
+.testimonial__description {
   margin-bottom: var(--mb-2-5);
 }
 
-.testimonial__icon-star{
+.testimonial__icon-star {
   color: var(--first-color);
-  
+
 }
 
-.swiper-container .swiper-pagination-testimonial{
+.swiper-container .swiper-pagination-testimonial {
   bottom: 0;
 }
+
 /*==================== CONTACT ME ====================*/
-.contact__container{
+.contact__container {
   row-gap: 3rem;
 }
 
-.contact__information{
+.contact__information {
   display: flex;
   margin-bottom: var(--mb-2);
 }
 
-.contact__icon{
+.contact__icon {
   font-size: 2rem;
   color: var(--first-color);
   margin-right: var(--mb-0-75);
 }
 
-.contact__title{
+.contact__title {
   font-size: var(--h3-font-size);
   font-weight: var(--font-medium);
 }
 
-.contact__subtitle{
+.contact__subtitle {
   font-size: var(--small-font-size);
   color: var(--text-color-light);
 }
 
-.contact__content{
+.contact__content {
   background-color: var(--input-color);
   border-radius: .5rem;
   padding: .75rem 1rem .25rem;
 }
 
-.contact__label{
+.contact__label {
   font-size: var(--small-font-size);
   color: var(--title-color);
 }
 
-.contact__input{
+.contact__input {
   width: 100%;
   background-color: var(--input-color);
   color: var(--text-color);
@@ -931,45 +954,45 @@ border-radius: .5rem;
 
 /*==================== FOOTER ====================*/
 
-.footer__container{
+.footer__container {
   row-gap: 3.5rem;
 }
 
-.footer__bg{
+.footer__bg {
   background-color: var(--first-color-second);
   padding: 2rem 0 3rem;
 }
 
 
-.footer__title{
+.footer__title {
   font-size: var(--h1-font-size);
   margin-bottom: var(--mb-0-25);
 }
 
-.footer__subtitle{
+.footer__subtitle {
   font-size: var(--small-font-size);
 }
 
-.footer__links{
+.footer__links {
   display: flex;
   flex-direction: column;
   row-gap: 1.5rem;
 }
 
-.footer__link:hover{
+.footer__link:hover {
   color: var(--first-color-lighter);
 }
 
-.footer__social{
+.footer__social {
   font-size: 1.25rem;
   margin-right: var(--mb-1-5);
 }
 
-.footer__social:hover{
+.footer__social:hover {
   color: var(--first-color-lighter);
 }
 
-.footer__copy{
+.footer__copy {
   font-size: var(--small-font-size);
   text-align: center;
   color: white;
@@ -979,12 +1002,12 @@ border-radius: .5rem;
 .footer__title,
 .footer__subtitle,
 .footer__link,
-.footer__social{
+.footer__social {
   color: #FFF;
 }
 
 /*========== SCROLL UP ==========*/
-.scrollup{
+.scrollup {
   position: fixed;
   right: 1rem;
   bottom: -20%;
@@ -996,32 +1019,33 @@ border-radius: .5rem;
   transform: .4s;
 }
 
-.scrollup:hover{
+.scrollup:hover {
   background-color: var(--first-color-alt);
 }
 
-.scrollup__icon{
+.scrollup__icon {
   font-size: 1.5rem;
   color: #FFF;
 }
 
 /* Show scroll */
-.show-scroll{
+.show-scroll {
   bottom: 5rem;
 }
 
 
 /*========== SCROLL BAR ==========*/
-::-webkit-scrolbar{
+::-webkit-scrolbar {
   width: .60rem;
   background-color: var(--scroll-bar-color);
   border-radius: .5rem;
 }
 
-::-webkit-scrollbar-thumb{
+::-webkit-scrollbar-thumb {
   background-color: var(--scroll-thumb-color);
   border-radius: .5rem;
 }
+
 /*==================== MEDIA QUERIES ====================*/
 /* For small devices */
 
